--- a/.github/workflows/admin.yaml
+++ b/.github/workflows/admin.yaml
@@ -23,4 +23,4 @@ jobs:
       # Dockerfile build target (see. https://docs.docker.com/develop/develop-images/multistage-build/)
       target: 'production'
       registry: ghcr.io
-      image_name: kraken-admin
+      image_name: ${{ github.repository }}-admin
