--- a/.github/workflows/students.yaml
+++ b/.github/workflows/students.yaml
@@ -30,4 +30,4 @@ jobs:
       # Dockerfile build target (see. https://docs.docker.com/develop/develop-images/multistage-build/)
       target: 'production'
       registry: ghcr.io
-      image_name: kraken-students
+      image_name: ${{ github.repository }}-students
