--- a/.github/workflows/FLASK.yaml
+++ b/.github/workflows/FLASK.yaml
@@ -14,6 +14,8 @@ on:
 jobs:
 
   build:
+    if: !contains(github.ref_name, 'develop')
+      && !contains(github.ref_name, 'master')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
