--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: '3.9'
 
 services:
 
@@ -74,9 +74,48 @@ services:
     networks:
       - traefik
 
+  admin:
+    container_name: ${APP_NAME}-admin
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.$TRAEFIK_KEY-admin-web.rule=host(`admin.$HOST`)"
+    build:
+      context: ./admin
+    networks:
+      - traefik
+
+  students:
+    container_name: ${APP_NAME}-students
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.$TRAEFIK_KEY-students-web.rule=host(`students.$HOST`)"
+    build:
+      context: ./students
+    networks:
+      - traefik
+
+  backend:
+    container_name: ${APP_NAME}-backend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.$TRAEFIK_KEY-backend-web.rule=host(`backend.$HOST`)"
+      - "traefik.http.services.$TRAEFIK_KEY-backend-service.loadbalancer.server.port=5000"
+    build:
+      context: ./backend
+    volumes:
+      - ./work:/home/gestproj/data
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./home:/home/etudiants
+      - ./backend/cli:/home/gestproj/cli
+      - ./backend/gplib:/home/gestproj/gplib
+      - ./backend/config/docker-skell:/home/gestproj/docker-skell
+    networks:
+      - traefik
+
 networks:
   traefik:
     name: traefik-gateway
 
 volumes:
-  prometheus-data: {}
+  backendData: {}
+  prometheus-data: { }
