--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,15 @@ version: '3.9'
 services:
 
   traefik:
+    image: traefik:v2.6
+    container_name: ${APP_NAME}-traefik
     command:
+      - --log.level=DEBUG
+      - --api.insecure=true
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --entrypoints.web.address=:80
+      - --entrypoints.websecure.address=:443
       - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
       - --entrypoints.websecure.http.tls.domains[0].main=$DOMAIN
       - --entrypoints.websecure.http.tls.domains[0].sans=*.$DOMAIN
@@ -17,40 +25,132 @@ services:
       - "traefik.http.routers.traefik-api.tls=true"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true"
+    ports:
+      - "80:80"
+      - "443:443"
+      - "8090:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./letsencrypt:/letsencrypt
+    networks:
+      - traefik
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: ${APP_NAME}-prometheus
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.retention.time=5d
+      - --storage.tsdb.retention.size=21474836480B
+      - --web.enable-lifecycle
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/pro  metheus/prometheus.yml
+      - ./prometheus/prometheus.rules.yml:/etc/prometheus/prometheus.rules.yml:ro
+      - prometheus-data:/prometheus
+    labels:
+      - "traefik.enable=false"
+    depends_on:
+      - traefik
+    networks:
+      - traefik
+
+  backend-cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: ${APP_NAME}-cadvisor
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    networks:
+      - traefik
 
   grafana:
+    image: grafana/grafana
+    container_name: ${APP_NAME}-grafana
     labels:
-      - "traefik.http.routers.$TRAEFIK_KEY-grafana-web.entrypoints=web"
+      - "traefik.enable=true"
+      - "traefik.http.routers.$TRAEFIK_KEY-grafana-web.rule=host(`grafana.$HOST`)"
+      - "traefik.http.services.$TRAEFIK_KEY-grafana-service.loadbalancer.server.port=3000"
       - "traefik.http.routers.$TRAEFIK_KEY-grafana-web.entrypoints=web"
       - "traefik.http.routers.$TRAEFIK_KEY-grafana-web.middlewares=redirect-to-https"
       - "traefik.http.routers.$TRAEFIK_KEY-grafana.tls=true"
       - "traefik.http.routers.$TRAEFIK_KEY-grafana.tls.certresolver=letsencrypt"
       - "traefik.http.routers.$TRAEFIK_KEY-grafana.rule=Host(`grafana.$HOST`)"
       - "traefik.http.routers.$TRAEFIK_KEY-grafana.entrypoints=websecure"
+    volumes:
+      - ./grafana/dashboards.yaml:/etc/grafana/provisioning/dashboards/all.yaml
+      - ./grafana/datasources.yaml:/etc/grafana/provisioning/datasources/all.yaml
+      - ./grafana/core-metrics.json:/var/lib/grafana/dashboards/core-metrics.json
+    environment:
+      - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/var/lib/grafana/dashboards/core-metrics.json
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
+    depends_on:
+      - prometheus
+    networks:
+      - traefik
 
   admin:
+    container_name: ${APP_NAME}-admin
     labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.$TRAEFIK_KEY-admin-web.rule=host(`admin.$HOST`)"
       - "traefik.http.routers.$TRAEFIK_KEY-admin-web.entrypoints=web"
       - "traefik.http.routers.$TRAEFIK_KEY-admin-web.middlewares=redirect-to-https"
       - "traefik.http.routers.$TRAEFIK_KEY-admin.tls=true"
       - "traefik.http.routers.$TRAEFIK_KEY-admin.tls.certresolver=letsencrypt"
       - "traefik.http.routers.$TRAEFIK_KEY-admin.rule=Host(`admin.$HOST`)"
       - "traefik.http.routers.$TRAEFIK_KEY-admin.entrypoints=websecure"
+    build:
+      context: ./admin
+    networks:
+      - traefik
 
   students:
+    container_name: ${APP_NAME}-students
     labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.$TRAEFIK_KEY-students-web.rule=host(`students.$HOST`)"
       - "traefik.http.routers.$TRAEFIK_KEY-students-web.entrypoints=web"
       - "traefik.http.routers.$TRAEFIK_KEY-students-web.middlewares=redirect-to-https"
       - "traefik.http.routers.$TRAEFIK_KEY-students.tls=true"
       - "traefik.http.routers.$TRAEFIK_KEY-students.tls.certresolver=letsencrypt"
       - "traefik.http.routers.$TRAEFIK_KEY-students.rule=Host(`students.$HOST`)"
       - "traefik.http.routers.$TRAEFIK_KEY-students.entrypoints=websecure"
+    build:
+      context: ./students
+    networks:
+      - traefik
 
   backend:
+    container_name: ${APP_NAME}-backend
     labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.$TRAEFIK_KEY-backend-web.rule=host(`backend.$HOST`)"
+      - "traefik.http.services.$TRAEFIK_KEY-backend-service.loadbalancer.server.port=5000"
       - "traefik.http.routers.$TRAEFIK_KEY-backend-web.entrypoints=web"
       - "traefik.http.routers.$TRAEFIK_KEY-backend-web.middlewares=redirect-to-https"
       - "traefik.http.routers.$TRAEFIK_KEY-backend.tls=true"
       - "traefik.http.routers.$TRAEFIK_KEY-backend.tls.certresolver=letsencrypt"
       - "traefik.http.routers.$TRAEFIK_KEY-backend.rule=Host(`backend.$HOST`)"
       - "traefik.http.routers.$TRAEFIK_KEY-backend.entrypoints=websecure"
+    build:
+      context: ./backend
+    volumes:
+      - ./work:/home/gestproj/data
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./home:/home/etudiants
+      - ./backend/cli:/home/gestproj/cli
+      - ./backend/gplib:/home/gestproj/gplib
+      - ./backend/config/docker-skell:/home/gestproj/docker-skell
+    networks:
+      - traefik
+
+networks:
+  traefik:
+    name: traefik-gateway
+
+volumes:
+  backendData: {}
+  prometheus-data: { }
