--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -29,7 +29,7 @@ jobs:
 
   # Build & Push the Docker image from the admin panel
   docker:
-    needs: ['flask']
+    needs: ['flask-cli', 'flask-backend', 'flask-api']
     uses: ./.github/workflows/DOCKER.yaml
     secrets:
       SSH_HOST: ${{ secrets.SSH_HOST }}
