--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -17,11 +17,6 @@ jobs:
     with:
       workdir: './backend/cli'
 
-  flask-gplib:
-    uses: ./.github/workflows/FLASK.yaml
-    with:
-      workdir: './backend/gplib'
-
   flask-api:
     uses: ./.github/workflows/FLASK.yaml
     with:
@@ -29,7 +24,7 @@ jobs:
 
   # Build & Push the Docker image from the admin panel
   docker:
-    needs: ['flask-cli', 'flask-gplib', 'flask-api']
+    needs: ['flask-cli', 'flask-api']
     uses: ./.github/workflows/DOCKER.yaml
     secrets:
       SSH_HOST: ${{ secrets.SSH_HOST }}
