--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,6 +3,16 @@ name: Deploy release
 on:
   push:
     branches: ['main']
+  workflow_call:
+    secrets:
+      token:
+        required: false
+      PRIVATE_KEY:
+        required: true
+      SSH_USER:
+        required: true
+      SSH_HOST:
+        required: true
 
 jobs:
 
