Fix doco deploy

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -66,4 +66,4 @@ jobs:
           script: |
             cd /home/fragan/gestproj/src
             git pull
-            docker compose -f docker-compose.dev.yml -f up -d --build
+            docker compose -f docker-compose.dev.yml up -d --build
